--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listing projects</h1>
 
 <% @projects.each do |project| %>
-	<p><%= project[:title] %>
-		
+	<p>
+		 <%= link_to project[:title], project %>			
 	</p>
 <% end %>
