Generate users and sessions controller and views

--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -11,6 +11,13 @@
             <li class="<%= 'active' if current_page? projects_path or @project%>">
             <!-- <li class="<%= 'active' if current_page? @project %>">   -->
               <%= link_to 'Projects', :projects %>
+            <div class="pull-right">
+              <% if logged_in? %>
+                <%= link_to 'Logout', '#', class: 'btn' %>
+              <% else %>
+                <%= link_to 'Sign Up', [:new, :user], class: 'btn btn-primary' %>
+              <% end %>
+            </div>
             </li>
           </ul>
         </div>
