--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,21 @@
 </head>
 <body>
 	<%= render 'layouts/shared/nav' %>
+	
+	<% if flash[:notice] %>
+      <p id="notice"><%= flash[:notice] %></p>
+    <% end %>
+    <% if flash[:alert] %>
+      <p id="alert"><%= flash[:alert] %></p>
+    <% end %>
+	
+	<% if current_user %>
+		Logged in as <%= current_user.email %>.
+		<%= link_to "Log out", logout_path %>
+	<% else %>
+		<%= link_to "Sign up", signup_path %> or
+		<%= link_to "log in", login_path %>.
+	<% end %>
 
     <div class="container">
 			<%= yield %>
