--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -11,14 +11,14 @@
           <li class="<%= 'active' if current_page? projects_path or @project%>">
             <%= link_to 'Projects', :projects %>
           </li>
+        </ul>  
           <div class="pull-right">
             <% if logged_in? %>
-              <%= link_to 'Logout', '#', class: 'btn' %>
+              <%= link_to 'Logout', logout_path, class: 'btn' %>
             <% else %>
               <%= link_to 'Sign Up', [:new, :user], class: 'btn btn-primary' %>
             <% end %>
           </div>
-        </ul>
       </div>
     </div>
   </div>
