--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,6 +9,18 @@
       </ul>
     </div>
   <% end %>
+
+  <% unless f.object.errors.empty? %>
+  <div class="alert alert-error">
+    <strong>Try again after fixing the following things:</strong><br/>
+    <ul>
+      <% f.object.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  </div>
+  <% end %>
+
   <div class="field">
     <%= f.label :first_name %>
     <%= f.text_field :first_name %>
